# sxcar

./: .gitattributes  .gitignore  README.md  package.json
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.release  audit.toml
backend/.sqlx/: query-05f566a24f520bac6c527ff43833bdb07e7c06a89a4b64558da84458fcbac3dd.json  query-060e3ad7a3eb47412511b02a507394f848e1f2ae38805104532d88b0be0d79c8.json  query-0aa0c516ee3d8288d0e269a013df8c88aec06587642343d961fc195a78b21c59.json  query-0bb9e2298b76589a2b64266391e1d1ede46b1724475e88a1d65f3aa941f6fcb0.json  query-1541c383dc9bab33906ec6bfc43a36c8783377dba238aa0d5bac936921d55350.json  query-15559676400fb71cfa8f6414b8f40648752f26c4c4df8facb4a2c1e1a046693a.json  query-1a2699550e9cd2f033a15b8e44b3fcacc1b65bd6431396ea367d82047318b247.json  query-1b5ee138087fa147089bb2ba9f8155d1d665939c3534639364d6b7513a7748b1.json  query-1d2cb473f60f78a822f1cc3bf54fdebcb2a7936be1d492006af266c8d1078244.json  query-1d933bec9953e05d7d9c964083516813b108faaa5175bcd211b41c76b155bcf5.json  query-277c73bb8a1e7ca0af15e4c0a0f069e55472627bec154451bdd24a903051e612.json  query-2d00bfb8409463c8d54edaf0d7b4d0f109694ef7921feb35ea70ace70a516c29.json  query-2f0cad50aa512b6c39d21b6abf1cd5067bf6d6d3db82b9b045809dac1945664c.json  query-393f5c3084227e4d4b2eb4fb1385d40ef55ccc7087b45366e35d6a5e89205037.json  query-3c63acf1c225bdccfdbadd5b22336cf91ac7e7b0afaae83b072056e52b2c3182.json  query-417673fbc749c7c92b8c39ecd8fd00ddab350d86422e2449f8cf26dca20940a1.json  query-48949e53caad7ec5652c496ccf27d53be18af0983e553607014ac5438493871b.json  query-497a4c007d0e833be4ae46269c352b5dc610c99cc10fd71bdced2423ecd2ab31.json  query-53d6331f9a981f8faf1b89f346c286f944276e8287ec897aade7d6417aabc7c0.json  query-54f3db2668cfeaf2dd395ba1ceb81187e085cc3bfbe06dd785aeba0ea40b7751.json  query-69a975fc284bb77977d22d2074a3ba0e7497ca833073f091195b032436466b81.json  query-70ce3b2cdf058c5b3ee780bc7919af0b520346ba5b98fd41df5693d03bfae7c2.json  query-7382103ac2aed4e1020de16233032db9c6fa90c0df733b2bc5c8a38c8a147166.json  query-77e507c36151effcc38b369b5ac393ebc9ba2906fa0becd49740eeea6cc745ea.json  query-7a4a0ce118adee55c06cc7531486e94d287fa041fb9d6c1ac66527dd8a7acab8.json  query-7e71460865990c114efc7b1983265dbef1b9c43be951ba4cc325eb5b4e1d71c9.json  query-7f2ae7ec032c04bf50913bd133a43300cc4bb95f28a477da731667ade5fb88ef.json  query-860bf5097791ece1ae4df8151a2844dc74ed214117250cfd2aedb99dcfa46924.json  query-86ea0aaa9f6e66a73df134b8183bb125fbdc03ab77764c308487549fc9226090.json  query-8b7ccf81eb0d1363f256a68d20ad927802140fd891b0d38b6d8a109daa779a62.json  query-8e76d08e7948aa06ce14f4729f9d779007bd195dae38d74834ef3fc3f1095d0a.json  query-8f0d2b9408be568fe8d0c67dfb63b7a13802b8e5768d86afe519487c3ef798ca.json  query-9298b7d071836d8690b7a6f738b4137d3a553b126afa56543abdc2927cacc214.json  query-946a0d5c7f35a98bd8bb45962c38cf655bab50e73355723fe8992e1d8b9f1f19.json  query-94b9ad3e63ab89af7444eb57b6b9d2690740eb5620e7c477f1f3fa151276a117.json  query-9be53d0b40ffaa6ebfcd20f763efb7933351a1cad54c3af0262f1cd7b05e9c83.json  query-a0da12546cae496fd8a17a5f207fa3d569c8b333f6ee78aea004d230d1c9384b.json  query-a2e439722c8e2f450f98a1715897c140bd120e1f7ff5903dbe7e583677da8e26.json  query-addc98abfa47fdb454d36a29da222de55330ff6eabf4ddb35bb81ca8b4ad5dae.json  query-bdc0bc8a9af94e3b6cbf4176263de4463fae14c88fcb042edf1ea2fbb8c44cff.json  (+5 more)
backend/crates/api/: Cargo.toml
backend/crates/api/src/: albums.rs  chat.rs  chat_broker.rs  config.rs  cors.rs  dev.rs  fcm.rs  grid.rs  grindr_t1.rs  health.rs  lib.rs  main.rs  media.rs  msgpack.rs  notifications.rs  profile.rs  ratelimit.rs  social.rs  tarpit.rs  tier2.rs  tier3.rs  well_known.rs
backend/crates/api/tests/: admin_auth.rs  admin_config.rs  admin_countries.rs  admin_enterprise.rs  admin_middleware.rs  admin_moderation.rs  admin_plans.rs  admin_support.rs  admin_users.rs  albums.rs  auth.rs  chat.rs  dev.rs  grid.rs  grid_filters.rs  grindr_t1.rs  health.rs  notifications.rs  profile.rs  social.rs  tier2.rs  tier3.rs  well_known.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: age.rs  code.rs  error.rs  jwt.rs  lib.rs  notify.rs  oauth.rs  password.rs  tokens.rs
backend/crates/auth_admin/: Cargo.toml
backend/crates/auth_admin/src/: error.rs  jwt.rs  keystore.rs  lib.rs  mfa_token.rs  password.rs  recovery.rs  totp.rs
backend/crates/auth_admin/tests/: jwt.rs  keystore.rs  mfa_token.rs  password.rs  recovery.rs  totp.rs
backend/crates/db/: Cargo.toml
backend/crates/db/.sqlx/: query-012edd7eb02cfe71e8d80c97e3f2601b3fe2f8ce4f53f9bac91df9f8c127a471.json  query-076e93fe6f32fc2d5e86af16cd9a2d38937d32171ec3bac05de84745efb2a13a.json  query-0a9b9a2425df3ff92567342890e9eba338ab926b4a279467a459d065f63d3efa.json  query-0f54822bef05d64f3309d929314b4eefff7d718854e2d383b89c0ec84ea6e801.json  (+17 more)
backend/crates/db/src/: albums.rs  chat.rs  (+15 more)
backend/crates/px_core/: Cargo.toml
backend/migrations/: 0001_extensions.sql  0002_identity.sql  0003_profiles.sql  0004_geo.sql  0005_social_messaging.sql  0006_albums.sql  0007_monetization.sql  0008_trust_safety.sql  0009_indexes.sql  0010_auth_codes.sql  0011_admin_ad1.sql  0012_admin_ad2_permissions.sql  0013_admin_ad3_moderation.sql  0014_admin_ad4_support.sql  0015_admin_ad5_config.sql  0016_admin_ad6_plans_countries.sql  0017_admin_ad7_enterprise.sql  0018_profile_extras.sql  0019_albums_extras.sql  0020_notification_prefs.sql  0021_social_extras.sql  0022_grindr_tier1.sql  0023_grindr_tier2.sql  0024_grindr_tier3.sql  0025_profile_verification.sql  0026_ephemeral_photos.sql
(+245 files in other folders)
