[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http.workspace = true
async-stream = "0.3"
db = { path = "../db" }

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
