[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http.workspace = true
async-stream = "0.3"
async-trait = "0.1"
auth = { path = "../auth" }
db = { path = "../db" }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3" }

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
serde_json.workspace = true
tokio.workspace = true
