[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http.workspace = true
async-stream = "0.3"
async-trait = "0.1"
auth = { path = "../auth" }
auth_admin = { path = "../auth_admin" }
db = { path = "../db" }
sqlx.workspace = true
px_core = { path = "../px_core" }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
rmp-serde = "1"
futures-util = "0.3"

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret"] }
