[package]
name = "auth_admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Auth primitives for the admin panel (staff identity, 2FA, audit)"

[dependencies]
# Hashing de passwords (argon2id m=64MB t=3 p=1).
argon2 = "0.5"
# TOTP RFC 6238 (compatible con Google Authenticator / 1Password / Authy).
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret"] }
# JWT HS256 con aud=admin.
jsonwebtoken = "9"
# Cifrado del TOTP secret en reposo (AES-256-GCM).
aes-gcm = "0.10"
# Generacion de recovery codes y nonces.
rand = "0.8"
# Tiempo para exp claims y TTL de mfa_token.
time = { version = "0.3", features = ["macros"] }
# IDs de staff y sesiones.
uuid = { version = "1", features = ["v4"] }
# Errores tipados con thiserror (workspace).
thiserror = { workspace = true }
# Serializacion para JWT claims.
serde = { workspace = true }
# HMAC para mfa_token opaco.
hmac = "0.12"
sha2 = "0.10"
# Encoding base64url para mfa_token.
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
