[package]
name = "db"
version = "0.1.0"
edition.workspace = true

[dependencies]
sqlx.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde"] }
